fix(QInput): fix backface visibility after transform (#12297)

--- a/ui/src/components/field/QField.sass
+++ b/ui/src/components/field/QField.sass
@@ -45,6 +45,7 @@ $field-transition-label-right-up: .324s cubic-bezier(.4,0,.2,1)
     line-height: 1
     color: rgba(0,0,0,.54)
     padding: 8px 12px 0
+    backface-visibility: hidden
 
     &--animated
       transform: translateY(100%)
@@ -52,7 +53,6 @@ $field-transition-label-right-up: .324s cubic-bezier(.4,0,.2,1)
       left: 0
       right: 0
       bottom: 0
-      backface-visibility: hidden
 
   &__messages
     line-height: 1
@@ -197,7 +197,6 @@ $field-transition-label-right-up: .324s cubic-bezier(.4,0,.2,1)
     max-width: 133%
     transform: translateY(-40%) scale(.75)
     transition: transform $field-transition, max-width $field-transition-label-right-down
-    backface-visibility: hidden
 
   &--highlighted
     .q-field__label
